.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:08:16 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
20:08:19 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
make: Nothing to be done for 'all'.
20:14:02 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
20:14:07 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
make: Nothing to be done for 'all'.
20:14:29 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
make: Nothing to be done for 'all'.
20:14:32 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
make: Nothing to be done for 'all'.
20:16:16 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
20:16:19 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
make: Nothing to be done for 'all'.
20:16:50 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
make: Nothing to be done for 'all'.
20:18:28 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
20:18:33 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
make: Nothing to be done for 'all'.
20:19:44 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
In file included from /usr/include/c++/6/bits/char_traits.h:39:0,
                 from /usr/include/c++/6/ios:40,
                 from /usr/include/c++/6/ostream:38,
                 from /usr/include/c++/6/iostream:39,
                 from ../src/select.h:12,
                 from ../src/select.cpp:8:
/usr/include/c++/6/bits/stl_algobase.h: In instantiation of ‘static _OI std::__copy_move<<anonymous>, <anonymous>, <template-parameter-1-3> >::__copy_m(_II, _II, _OI) [with _II = std::istream_iterator<char>; _OI = std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >; bool <anonymous> = false; bool <anonymous> = false; <template-parameter-1-3> = std::input_iterator_tag]’:
/usr/include/c++/6/bits/stl_algobase.h:386:44:   required from ‘_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = false; _II = std::istream_iterator<char>; _OI = std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >]’
/usr/include/c++/6/bits/stl_algobase.h:422:45:   required from ‘_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = false; _II = std::istream_iterator<char>; _OI = std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >]’
/usr/include/c++/6/bits/stl_algobase.h:455:8:   required from ‘_OI std::copy(_II, _II, _OI) [with _II = std::istream_iterator<char>; _OI = std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >]’
../src/select.cpp:30:27:   required from here
/usr/include/c++/6/bits/stl_algobase.h:294:16: error: no match for ‘operator=’ (operand types are ‘std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >’ and ‘const char’)
      *__result = *__first;
      ~~~~~~~~~~^~~~~~~~~~
src/subdir.mk:36: recipe for target 'src/select.o' failed
In file included from /usr/include/c++/6/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/6/bits/char_traits.h:39,
                 from /usr/include/c++/6/ios:40,
                 from /usr/include/c++/6/ostream:38,
                 from /usr/include/c++/6/iostream:39,
                 from ../src/select.h:12,
                 from ../src/select.cpp:8:
/usr/include/c++/6/bits/stl_iterator.h:484:7: note: candidate: std::back_insert_iterator<_Container>& std::back_insert_iterator<_Container>::operator=(const typename _Container::value_type&) [with _Container = std::vector<std::__cxx11::basic_string<char> >; typename _Container::value_type = std::__cxx11::basic_string<char>]
       operator=(const typename _Container::value_type& __value)
       ^~~~~~~~
/usr/include/c++/6/bits/stl_iterator.h:484:7: note:   no known conversion for argument 1 from ‘const char’ to ‘const value_type& {aka const std::__cxx11::basic_string<char>&}’
/usr/include/c++/6/bits/stl_iterator.h:491:7: note: candidate: std::back_insert_iterator<_Container>& std::back_insert_iterator<_Container>::operator=(typename _Container::value_type&&) [with _Container = std::vector<std::__cxx11::basic_string<char> >; typename _Container::value_type = std::__cxx11::basic_string<char>]
       operator=(typename _Container::value_type&& __value)
       ^~~~~~~~
/usr/include/c++/6/bits/stl_iterator.h:491:7: note:   no known conversion for argument 1 from ‘const char’ to ‘std::vector<std::__cxx11::basic_string<char> >::value_type&& {aka std::__cxx11::basic_string<char>&&}’
/usr/include/c++/6/bits/stl_iterator.h:449:11: note: candidate: constexpr std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >& std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >::operator=(const std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >&)
     class back_insert_iterator
           ^~~~~~~~~~~~~~~~~~~~
/usr/include/c++/6/bits/stl_iterator.h:449:11: note:   no known conversion for argument 1 from ‘const char’ to ‘const std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >&’
/usr/include/c++/6/bits/stl_iterator.h:449:11: note: candidate: constexpr std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >& std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >::operator=(std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >&&)
/usr/include/c++/6/bits/stl_iterator.h:449:11: note:   no known conversion for argument 1 from ‘const char’ to ‘std::back_insert_iterator<std::vector<std::__cxx11::basic_string<char> > >&&’
make: *** [src/select.o] Error 1
20:22:48 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
20:22:56 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
make: Nothing to be done for 'all'.
